nav {   display: list-item;   width: 230px;   position: fixed;   top: 220px;   left:50%;   margin-left:-580px;   text-align: right;
  ul {
    list-style: none;
    list-style-image:none;
    font-size: 14px;
    line-height:24px;

    li {
      padding: 5px 0px;
      line-height: 16px;
      // padding-right:17px;
      // position:relative;
      // right:-12px;

      &.tag-h1 {
        font-size: 1em;
        text-decoration:none;
        font-weight:600;

        a:hover {
          font-size: 120%; 
          color: #63c0f5;
          text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);


        }
        a {
          font-weight: bold;
          color: white;
          transition: all .2s ease-out;
        }

        + .tag-h2 {

        }
      }

      &.tag-h2 {

        + .tag-h1 {
          margin-top:10px;
        }
      }
    }



    // .active {
    //   border-right:solid 4px #39C;
    //   padding-right:13px;
    // }
  }
}






footer {

--- a/assets/css/voyager.css
+++ b/assets/css/voyager.css
@@ -99,6 +99,75 @@ body {
     width: 100%;
   }
 
+  
+nav {
+  display: list-item;
+  width: 230px;
+  position: fixed;
+  top: 220px;
+  left:50%;
+  margin-left:-580px;
+  text-align: right;
+
+  ul {
+    list-style: none;
+    list-style-image:none;
+    font-size: 14px;
+    line-height:24px;
+
+    li {
+      padding: 5px 0px;
+      line-height: 16px;
+      // padding-right:17px;
+      // position:relative;
+      // right:-12px;
+
+      &.tag-h1 {
+        font-size: 1em;
+        text-decoration:none;
+        font-weight:600;
+
+        a:hover {
+          font-size: 120%; 
+          color: #63c0f5;
+          text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
+
+
+        }
+        a {
+          font-weight: bold;
+          color: white;
+          transition: all .2s ease-out;
+        }
+
+        + .tag-h2 {
+
+        }
+      }
+
+      &.tag-h2 {
+
+        + .tag-h1 {
+          margin-top:10px;
+        }
+      }
+    }
+
+
+
+    // .active {
+    //   border-right:solid 4px #39C;
+    //   padding-right:13px;
+    // }
+  }
+}
+
+
+
+
+
+
+
 
 img[src*="nasalogo_whitetext_redwing.svg"] {
   
